fix: layout issue

--- a/src/app/pages/dashboard/components/overlay/overlay.component.scss
+++ b/src/app/pages/dashboard/components/overlay/overlay.component.scss
@@ -1,10 +1,16 @@
 .container {
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 45%, rgba(255,255,255,0) 100%);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 45%, rgba(255, 255, 255, 0) 100%);
   width: 100%;
-  height: 100%;
+  height: 100vh;
+}
 
-  padding: 64px 16px;
+.toolbar-spacer {
+  height: 64px;
+}
+
+.city-container {
+  padding: 16px;
 }
 
 .city-button {
